simplicity_blue/theme/stylesheet.css
/* ... */
.panel {
  background-color: #f4f4f4;
  color: #141414; }

.post:target .content {
  color: #000; }

.post:target h3 a {
  color: #000; }

.bg1 {
  background-color: #f4f4f4; }

table.zebra-list tr:nth-child(odd) td, ul.zebra-list li:nth-child(odd) {
  background-color: #f4f4f4; }

.bg2 {
  background-color: #f6f6f6; }

table.zebra-list tr:nth-child(even) td, ul.zebra-list li:nth-child(even) {
  background-color: #f6f6f6; }

.bg3 {
  background-color: #f8f8f8; }
  .bg3.panel {
    background: transparent none;
    background-color: rgba(224, 224, 224, 0.3);
    border-top-color: #f8f8f8; }
    .bg3.panel:before, .bg3.panel:after {
      background: -webkit-linear-gradient(to bottom, #f8f8f8 0%, rgba(248, 248, 248, 0) 100%);
      background: -webkit-gradient(linear, left top, left bottom, from(#f8f8f8), to(rgba(248, 248, 248, 0)));
      background: -webkit-linear-gradient(top, #f8f8f8 0%, rgba(248, 248, 248, 0) 100%);
      background: -o-linear-gradient(top, #f8f8f8 0%, rgba(248, 248, 248, 0) 100%);
      background: linear-gradient(to bottom, #f8f8f8 0%, rgba(248, 248, 248, 0) 100%); }
  .section-posting .bg3.panel {
    background-color: #f4f4f4; }
    .section-posting .bg3.panel:before, .section-posting .bg3.panel:after {
      background: transparent; }

ul.navlinks {
  border-top-color: #e7e7e7; }

.forum_unread .forumtitle,
.forum_unread_subforum .forumtitle,
.forum_unread_locked .forumtitle {
  color: #d03c3c; }

.global_unread .topictitle, .global_unread_mine .topictitle, .announce_unread_mine .topictitle, .announce_unread .topictitle,
.global_unread_mine .topictitle, .announce_unread_mine .topictitle,
.global_unread_locked .topictitle, .global_unread_locked_mine .topictitle, .announce_unread_locked_mine .topictitle, .announce_unread_locked .topictitle,
.global_unread_locked_mine .topictitle, .announce_unread_locked_mine .topictitle,
.announce_unread .topictitle,
.announce_unread_mine .topictitle,
.announce_unread_locked .topictitle,
.announce_unread_locked_mine .topictitle,
.sticky_unread .topictitle,
.sticky_unread_mine .topictitle,
.sticky_unread_locked .topictitle,
.sticky_unread_locked_mine .topictitle,
.topic_unread .topictitle, .sticky_unread .topictitle, .pm_unread .topictitle,
.topic_unread_mine .topictitle, .sticky_unread_mine .topictitle,
.topic_unread_locked .topictitle, .sticky_unread_locked .topictitle,
.topic_unread_locked_mine .topictitle, .sticky_unread_locked_mine .topictitle,
.topic_unread_hot .topictitle,
.topic_unread_hot_mine .topictitle {
  color: #d03c3c; }

.forum-statistics {
  color: #868686; }

.forum-lastpost {
  color: #868686; }
  .forum-lastpost span:before {
    opacity: .5; }

.forum-description.toggle {
  color: #fff;
  background-color: rgba(61, 61, 61, 0.8); }
  .forum-description.toggle a {
    color: inherit !important; }
  .forum-description.toggle span.arrow {
    border-right-color: rgba(61, 61, 61, 0.8); }
  .rtl .forum-description.toggle span.arrow {
    border-right-color: transparent;
    border-left-color: rgba(61, 61, 61, 0.8); }

.forum-statistics .value {
  color: #000; }

table.table1 thead th {
  color: #fff; }

table.table1 tbody tr {
  border-color: #e7e7e7; }

table.table1 tbody tr:hover, table.table1 tbody tr.hover {
  background-color: #f8f8f8;
  color: #000; }

table.table1 td {
  color: #141414; }

table.table1 tbody td {
  border-top-color: #e7e7e7; }

table.table1 tbody th {
  border-bottom-color: #e7e7e7;
  color: #000;
  background-color: #e0e0e0; }

table.info tbody th {
  color: #000; }

dl.details dt {
  color: #000; }

dl.details dd {
  color: #336092; }

.sep {
  color: #1f5fa6; }

/* Icon styles
---------------------------------------- */
.icon.icon-blue, a:hover .icon.icon-blue {
  color: #196db5; }

.icon.icon-green, a:hover .icon.icon-green {
  color: #1b9A1B; }

.icon.icon-red, a:hover .icon.icon-red {
  color: #BC2A4D; }

.icon.icon-orange, a:hover .icon.icon-orange {
  color: #FF6600; }

.icon.icon-bluegray, a:hover .icon.icon-bluegray {
  color: #536482; }

.icon.icon-gray, a:hover .icon.icon-gray {
  color: #777777; }

.icon.icon-lightgray, a:hover .icon.icon-lightgray {
  color: #999999; }

.icon.icon-black, a:hover .icon.icon-black {
  color: #333333; }

.alert_close .icon:before {
  background-color: #FFFFFF; }

/* Jumpbox */
.jumpbox .dropdown li {
  border-top-color: #1f5fa6; }

.jumpbox-cat-link {
  background-color: #1f5fa6;
  border-top-color: #0076B1;
  color: #fff; }

.jumpbox-cat-link:hover {
  background-color: #12A3EB;
  border-top-color: #12A3EB;
  color: #fff; }

.jumpbox-forum-link {
  background-color: #E1EBF2; }

.jumpbox-forum-link:hover {
  background-color: #F6F4D0; }

.jumpbox .dropdown .pointer-inner {
  border-color: #E1EBF2 transparent; }

.jumpbox-sub-link {
  background-color: #f4f4f4; }

.jumpbox-sub-link:hover {
  background-color: #e0e0e0; }

.pagination li a {
  color: #1f5fa6;
  background-color: #f4f4f4;
  border-color: #e7e7e7; }

.pagination li.ellipsis span {
  background-color: transparent;
  color: #000; }

.pagination li.active span {
  color: #fff;
  background-color: #1f5fa6;
  border-color: #1f5fa6; }

.pagination li a:hover, .pagination .dropdown-visible a.dropdown-trigger, .nojs .pagination .dropdown-container:hover a.dropdown-trigger {
  border-color: #d03c3c;
  background-color: #d03c3c;
  color: #fff; }

.pagination li.page-jump a:after {
  color: #1f5fa6; }

.pagination li.page-jump a:hover:after {
  color: #d03c3c; }

.copyright {
  color: #868686; }

.error {
  color: #d03c3c; }

.reported {
  background-color: #f5e9e9; }
  .reported .postprofile, .reported .signature {
    border-color: #f0dede; }

li.reported:hover {
  background-color: #f5e9e9; }

div.rules {
  background-color: #dec7c7;
  color: #d03c3c; }

p.post-notice {
  background-color: #efd8d8;
  color: #d03c3c;
  background-image: none; }

p.post-notice.deleted:before, p.post-notice.unapproved:before, p.post-notice.reported:before, p.post-notice.error:before {
  font-family: FontAwesome; }
/* ... */

